NXP-7619: better modularity, forms style improvement

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/basics.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/basics.css
@@ -23,7 +23,7 @@ a:hover { color: "link.hover (__FLAVOR__ color)"; text-decoration: underline }
 h1, h2, h3 { color: "title.major (__FLAVOR__ color)"; font-weight: bold }
 h1 { font-size: 1.6em; padding: .4em 0 .5em }
 h2 { font-size: 1.3em; padding: .5em 1em .5em 0 }
-h3 { font-size: 1.2em; padding: .8em 0 .3em }
+h3 { font-size: 1.2em; padding: .8em 0 1em }
 h4, h5, h6 { color: "title.minor (__FLAVOR__ color)";font-size: .8em; margin: .2em 0 .2em 0 }
 
 /* =Helpers */
