--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/forms.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/forms.css
@@ -11,5 +11,17 @@ textarea { font-family: "default (__FLAVOR__ font)"; padding: 5px; font-size: .9
 .checkBox { margin-right: 3px }
 .required { background: transparent url("${basePath}/icons/required.gif") top right no-repeat; padding: 0 10px 0 0 }
 
+input, input[type="file"], textarea, select { border: 1px solid #bbb; border-radius: 2px; box-shadow: 1px 1px 2px #e0e0e0 inset; color: #666; display: inline-block; font-size: 1em; line-height: 18px; padding: 3px;}
+
+select:focus > option:checked, select:focus > optgroup > option:checked { background-color: "color.major.stronger (__FLAVOR__ background)"; }
+input:focus, textarea:focus { border-color: "color.major.strong (__FLAVOR__ border)"; }
+
+/* in Tables */
+.dataInput textarea, .dataInput .dataInputText { width: 500px }
+.dataInput textarea, .dataInput .dataInputText, .dataInput .dataInputTextNoSize { vertical-align: top }
+.dataInput select { box-shadow: 1px 1px 2px #e0e0e0 inset; padding: 3px; vertical-align: top }
+
+.taskPrincipalSelect select { margin: 5px 0 10px 15px; padding: 2px 1px 2px 1px }
+
 /* =Calendar */
 .calendarTrigger { cursor: pointer; margin: 0 0 5px; vertical-align: bottom }
