--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/body.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/body.css
@@ -5,10 +5,7 @@ author: lkemen@nuxeo.com
 
 .nxMainContainer { width: 100%; font-size: .8em }
 .nxMainContainer .column { border-width: 1px; border-style: none solid none none; border-color: "neutral.lighter (__FLAVOR__ border)"; font-size: .85em; padding: 5px; width: 18% }
-.nxMainContainer .content {
-  background: url("${basePath}/img/theme_galaxy/galaxy_logo.png") no-repeat scroll right bottom #fff;
-  padding: 0;
-  width: 82% }
+.nxMainContainer .content { padding: 0 }
 .mainFragment { padding: 7px }
 
 .currentDocumentDescription { font-size: .8em; padding: 4px 0 }
