--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
@@ -9,7 +9,7 @@ author: lkemen@nuxeo.com
 
 /* =Buttons */
 .button, input.button {
-	box-shadow:inset 0px 1px 0px 0px #fff;
+	box-shadow:inset 0 10px 8px #FFFFFF;
 	background-color: "button (__FLAVOR__ background)";
 	border-radius:3px;
 	border:1px solid;  border-color: "button (__FLAVOR__ border)";
@@ -22,7 +22,7 @@ author: lkemen@nuxeo.com
 	text-decoration:none;
 	text-shadow:1px 1px 0px #fff }
 .button:hover, input.button:hover {
-  background: none "color.minor.light (__FLAVOR__ background)";
+  background: none "color.major.medium (__FLAVOR__ background)";
 	border: 1px solid; border-color: "button.hover (__FLAVOR__ border)" }
 
 input.button[disabled=disabled], input.button[disabled=disabled]:hover,
@@ -77,20 +77,33 @@ div.syndicationButton div.syndicationLinks a { color: #fff }
 .listingLayoutSelector .langSelect { float: left; font-size: 0.8em; padding: 1px }
 
 /* =Actionbar in Home */
-.headerTitleAndTools { margin-bottom: 50px }
+.headerTitleAndTools { margin-bottom: 40px }
 .headerTitleAndTools h1 { display: inline }
 .headerTitleAndTools .globalActionBar { float: right }
 .globalActionBar h1 { float: left }
 .globalActionBar .actionList { float: right; list-style: none; margin: 0; padding: 0 }
-.globalActionBar .actionList li { background:"neutral.lighter (__FLAVOR__ background)"; border:1px solid;
-border-color: "neutral.light (__FLAVOR__ border)"; cursor:pointer; float:right; margin:0 0 0 8px; padding:3px 5px; position:relative; text-decoration:none; z-index:3000; border-radius:2px;}
+.globalActionBar .actionList li { cursor:pointer; float:right; font-weight: normal; margin:0 0 0 8px; position:relative; text-decoration:none; z-index:3000 }
 .globalActionBar .actionList li a { color: "default (__FLAVOR__ color)"; padding:0 }
-.globalActionBar .actionList li:hover { border-color: "neutral.dark (__FLAVOR__ border)" }
-.globalActionBar .actionList .actionSubList { background-color:#fff; border:1px solid; border-color: "neutral.light (__FLAVOR__ border)"; display:none; list-style:none; padding:0; position:absolute; right:0; top:20px; width:250px; z-index:1001; box-shadow:1px 1px 3px rgba(0, 0, 0, 0.2);}
+.globalActionBar .actionList .actionSubList { background-color:#fff; border:1px solid; border-color: "neutral.light (__FLAVOR__ border)"; display:none; list-style:none; padding:0; position:absolute; right:0; top:24px; width:250px; z-index:1001; box-shadow:1px 1px 3px rgba(0, 0, 0, 0.2);}
 .globalActionBar .actionList .actionSubList li { background:none; border:none; display:inline; float:none; height:auto; margin:0; padding:0; text-align:left; width:300px;}
 .globalActionBar .actionList .actionSubList li a { background:none; border:none; display:block; margin:0; padding:5px 10px; text-decoration:none;}
 .globalActionBar .actionList .actionSubList li a:hover { background-color:"color.major.medium (__FLAVOR__ background)";}
 
+/* Foldablebox Action for Local Configuration*/
+.foldableBox h3 a.action, .foldableBox h3 a.action:visited {
+  box-shadow:0 8px 8px #fff inset;
+  background-color:"neutral.medium (__FLAVOR__ background)";
+  border-radius:3px;
+  border:1px solid;  border-color: "neutral.light (__FLAVOR__ border)";
+  color:"black (__FLAVOR__ color)";
+  float: right;
+  font-size: 0.8em;
+  font-weight: bold;
+  margin: 0 5px;
+  padding: 0 6px;
+  text-decoration:none;
+  text-shadow:1px 1px 0px #fff }
+.foldableBox h3 a.action:hover, .foldableBox h3 a.action:visited:hover { background: none "color.major.medium (__FLAVOR__ background)"; border: 1px solid; border-color: "neutral.medium (__FLAVOR__ border)" }
 
 /* =RightClick menu */
 #contextMenu {
