--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/navigation.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/navigation.css
@@ -46,7 +46,7 @@ author: lkemen@nuxeo.com
 /* =Navigation controls */
 .pageNavigationControls, #pageNavigationControls { border-width: 1px; border-style: none none solid; border-color: "neutral.lighter (__FLAVOR__ border)"; margin: 0 0 5px; padding: 2px 0 0; text-align: center }
 .pageNavigationControls span, #pageNavigationControls span { color: "gray.dark (__FLAVOR__ color)"; font-weight: bold; margin: 10px 5px; vertical-align: top }
-.pageNavigationControls input, #pageNavigationControls input { margin-left: 5px }
+.pageNavigationControls input, #pageNavigationControls input { border: medium none; box-shadow: none; margin-left: 5px }
 
 /* =Back Arrow */
 .directoryBack { background: url("${basePath}/icons/arrow_left.gif") no-repeat scroll 3px 1px transparent; padding: 2px 2px 2px 20px }
