NXP-7794 improve UI and fix refresh loop

--- a/nuxeo-startup-wizard/src/main/webapp/css/nuxeo.css
+++ b/nuxeo-startup-wizard/src/main/webapp/css/nuxeo.css
@@ -923,3 +923,9 @@ ul.hide {
   width:50px;
   cursor:pointer;
 }
+
+.downloadProgress {
+  background-color:green;
+  height:12px;
+  border-radius: 2px;
+}
