--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/polls.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/polls.css
@@ -3,8 +3,8 @@ Summary view for Polls used in Document Management view
 author: lkemen@nuxeo.com
 */
 .pollStatusLabel, .pollStatus { float:left }
-.pollStatusLabel { padding: 0 10px 5px 0 }
-.pollStatus span, .pollStatus a { padding: 1px 5px }
+.pollStatusLabel { padding: 0 .9em .4em 0 }
+.pollStatus span, .pollStatus a { padding: .1em .4em }
 .pollStatus .status {	font-weight: bold; background-color: "neutral.lighter (__FLAVOR__ background)" }
 .pollStatus .project { color: #0088c0 }
 .pollStatus .open { color: "normal.status  (__FLAVOR__ color)" }
