--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/breadcrumb.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/breadcrumb.css
@@ -4,13 +4,13 @@ author: lkemen@nuxeo.com
 */
 
 /* =Breadcrumb */
-.breadcrumb { background-color: "neutral.lighter (__FLAVOR__ background)"; border-width: 1px; border-style: none none solid; border-color: "neutral.lighter (__FLAVOR__ border)"; font-size: .7em; padding: 3px 7px }
+.breadcrumb { background-color: "neutral.lighter (__FLAVOR__ background)"; border-width: 1px; border-style: none none solid; border-color: "neutral.lighter (__FLAVOR__ border)"; font-size: .7em; padding: .3em .6em }
 .breadcrumb .action_bar { margin: 0 }
-.breadcrumb .action_bar a { border: none; padding: 3px 0 }
+.breadcrumb .action_bar a { border: none; padding: .3em 0 }
 
-.breadcrumbs { float: left; padding: 3px 4px 0 0 }
+.breadcrumbs { float: left; padding: .3em .4em 0 0 }
 .breadcrumbs a, .breadcrumbs a:link, .breadcrumbs a:visited { color: "gray.dark (__FLAVOR__ color)" }
 .breadcrumbs a:hover, .breadcrumbs a:active { font-weight: normal; text-decoration: underline }
 
-.printButton { float: right; padding-right: 1px }
-.printButton .liveEditCreateButtons { border-width: 1px; border-style: none solid none none;  border-color: "neutral.light (__FLAVOR__ border)"; margin-right: 5px; padding-right: 8px }
+.printButton { float: right; padding-right: .1em }
+.printButton .liveEditCreateButtons { border-width: 1px; border-style: none solid none none;  border-color: "neutral.light (__FLAVOR__ border)"; margin-right: .4em; padding-right: .7em }
