--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
@@ -9,18 +9,19 @@ author: lkemen@nuxeo.com
 
 /* =Buttons */
 .button, input.button {
-	box-shadow:inset 0 10px 8px #FFFFFF;
+	box-shadow: inset 0 10px 8px #FFFFFF;
 	background-color: "button (__FLAVOR__ background)";
-	border-radius:3px;
-	border:1px solid;  border-color: "button (__FLAVOR__ border)";
-	color:"link.action (__FLAVOR__ color)";
+	border-radius: 3px;
+	border: 1px solid;  border-color: "button (__FLAVOR__ border)";
+	color: "link.action (__FLAVOR__ color)";
 	cursor: pointer;
 	font-size: .9em;
-	font-weight:bold;
-	margin: 5px 10px 10px 0;
-	padding:4px 10px;
-	text-decoration:none;
-	text-shadow:1px 1px 0px #fff }
+	font-weight: bold;
+	margin: .4em .9em .9em 0;
+	padding: .3em .7em;
+	text-decoration: none;
+	text-shadow: 1px 1px 0px #fff;
+	white-space: nowrap; }
 .button:hover, input.button:hover {
   background: none "color.major.medium (__FLAVOR__ background)";
 	border: 1px solid; border-color: "button.hover (__FLAVOR__ border)" }
@@ -42,67 +43,70 @@ input.button[disabled], input.button[disabled]:hover {
 	background: none repeat scroll 0 0 #01a2df;
 	border: 1px solid #0186b8 }
 
-.smallButton, input.smallButton { font-size: 0.85em; padding: 3px }
+.smallButton, input.smallButton { font-size: 0.85em; padding: 0 .4em}
+
+.dropdown { background: url("${basePath}/icons/dropdown.png") no-repeat scroll right center transparent; padding: .5em 1.5em .5em .8em }
 
 /* =Syndication Button */
-div.syndicationButton { background-color: #ff9d5c; float: right; font-size: .7em; margin-bottom: 5px }
+div.syndicationButton { background-color: #ff9d5c; float: right; font-size: .7em; margin-bottom: .5em }
 .syndicationContainer { height: 30px }
-div.syndicationButton div.syndicationLinks {color: #fff; padding: 2px 4px }
+div.syndicationButton div.syndicationLinks {color: #fff; padding: .2em .4em }
 div.syndicationButton div.syndicationLinks a { color: #fff }
 
 /* =Action Bar */
-.action_bar { float: left; line-height: normal; margin: 10px 10px 10px 0 }
+.action_bar { float: left; line-height: normal; margin: 1em 1em 1em 0 }
 .action_bar_message { float: right; font-size: .8em; margin: 0 }
 .action_bar_message form { display: inline; text-align: right }
-.action_bar ul { list-style: none; margin: 0; padding: 0 10px 0 0 }
+.action_bar ul { list-style: none; margin: 0; padding: 0 1em 0 0 }
 .action_bar li { float: left; margin: 0; padding: 0 }
 .action_bar a {
-  box-shadow:0px 1px 0px 0px #fff inset;
-  background-color:"neutral.medium (__FLAVOR__ background)";
-  border-radius:3px;
-  border:1px solid; border-color: "neutral.light (__FLAVOR__ border)";
-  color:"black (__FLAVOR__ color)";
+  box-shadow: 0px 1px 0px 0px #fff inset;
+  background-color: "neutral.medium (__FLAVOR__ background)";
+  border-radius: 3px;
+  border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)";
+  color: "black (__FLAVOR__ color)";
   cursor: pointer;
   float: left;
   font-size: .9em;
-  font-weight:bold;
-  margin-right: 10px;
-  padding:4px 8px;
+  font-weight: bold;
+  margin-right: .9em;
+  padding: .4em .7em;
   text-decoration:none }
 .action_bar a:hover { background: none "neutral.lighter (__FLAVOR__ background)"; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)" }
-.action_bar a img { margin: 0 3px -2px -4px }
+.action_bar a img { margin: 0 .3em -0.2em -0.4em }
 
-.listingLayoutSelector { float: right; margin: 11px 0 10px 7px; text-align: right }
-.listingLayoutSelector .contentViewPageSelectorDesc { float: left; padding: 0 4px 0 0 }
-.listingLayoutSelector .langSelect { float: left; font-size: 0.8em; padding: 1px }
+.listingLayoutSelector { float: right; margin: 1.1em 0 1em .7em; text-align: right }
+.listingLayoutSelector .contentViewPageSelectorDesc { float: left; padding: 0 .4em 0 0 }
+.listingLayoutSelector .langSelect { float: left; font-size: 0.8em; padding: .1em }
 
 /* =Actionbar in Home */
-.headerTitleAndTools { margin-bottom: 40px }
+.headerTitleAndTools { margin-bottom: 4em }
 .headerTitleAndTools h1 { display: inline }
+.headerTitleAndTools h1 span { color: "gray.light (__FLAVOR__ color)"; font-weight: normal }
 .headerTitleAndTools .globalActionBar { float: right }
 .globalActionBar h1 { float: left }
 .globalActionBar .actionList { float: right; list-style: none; margin: 0; padding: 0 }
-.globalActionBar .actionList li { cursor:pointer; float:right; font-weight: normal; margin:0 0 0 8px; position:relative; text-decoration:none; z-index:3000 }
-.globalActionBar .actionList li a { color: "default (__FLAVOR__ color)"; padding:0 }
-.globalActionBar .actionList .actionSubList { background-color:#fff; border:1px solid; border-color: "neutral.light (__FLAVOR__ border)"; display:none; list-style:none; padding:0; position:absolute; right:0; top:24px; width:250px; z-index:1001; box-shadow:1px 1px 3px rgba(0, 0, 0, 0.2);}
-.globalActionBar .actionList .actionSubList li { background:none; border:none; display:inline; float:none; height:auto; margin:0; padding:0; text-align:left; width:300px;}
-.globalActionBar .actionList .actionSubList li a { background:none; border:none; display:block; margin:0; padding:5px 10px; text-decoration:none;}
+.globalActionBar .actionList li { cursor: pointer; float: right; font-weight: normal; margin: 0 0 0 .8em; position: relative; text-decoration: none; z-index:3000 }
+.globalActionBar .actionList li a { color: "default (__FLAVOR__ color)"; padding: 0 }
+.globalActionBar .actionList .actionSubList { background-color: #fff; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; display:none; list-style: none; padding: 0; position: absolute; right: 0; top: 26px; width: 250px; z-index: 1001; box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2) }
+.globalActionBar .actionList .actionSubList li { background: none; border: none; display: inline; float: none; height: auto; margin: 0; padding: 0; text-align: left; width: 300px }
+.globalActionBar .actionList .actionSubList li a { background: none; border: none; display: block; margin: 0; padding: .5em 1em; text-decoration: none }
 .globalActionBar .actionList .actionSubList li a:hover { background-color:"color.major.medium (__FLAVOR__ background)";}
 
 /* Foldablebox Action for Local Configuration*/
 .foldableBox h3 a.action, .foldableBox h3 a.action:visited {
-  box-shadow:0 8px 8px #fff inset;
-  background-color:"neutral.medium (__FLAVOR__ background)";
-  border-radius:3px;
-  border:1px solid;  border-color: "neutral.light (__FLAVOR__ border)";
-  color:"black (__FLAVOR__ color)";
+  box-shadow: 0 8px 8px #fff inset;
+  background-color: "neutral.medium (__FLAVOR__ background)";
+  border-radius: 3px;
+  border: 1px solid;  border-color: "neutral.light (__FLAVOR__ border)";
+  color: "black (__FLAVOR__ color)";
   float: right;
   font-size: 0.8em;
   font-weight: bold;
-  margin: 0 5px;
-  padding: 0 6px;
-  text-decoration:none;
-  text-shadow:1px 1px 0px #fff }
+  margin: 0 .5em;
+  padding: 0 .7em;
+  text-decoration: none;
+  text-shadow: 1px 1px 0px #fff }
 .foldableBox h3 a.action:hover, .foldableBox h3 a.action:visited:hover { background: none "color.major.medium (__FLAVOR__ background)"; border: 1px solid; border-color: "neutral.medium (__FLAVOR__ border)" }
 
 /* =RightClick menu */
@@ -114,10 +118,10 @@ div.syndicationButton div.syndicationLinks a { color: #fff }
   color: green;
   top: 0;
   left: 0 }
-.ctxMenuStyle { list-style: none; padding: 1px; margin: 0px; background-color: #232323; width: 100px; font-size: 9px }
-.ctxMenuItemStyle { margin: 0px; color: #e7e7e7; display: block; cursor: default; padding: 3px; border-bottom: 1px solid #232323; background-color:#3a3d40 }
-.ctxMenuItemHoverStyle { margin: 0px; color: #fff; display: block; cursor: default; padding: 3px; border-color: "color.major.stronger (__FLAVOR__ border)"; background-color: "color.major.stronger (__FLAVOR__ background)"; }
-.ctxMenuItemStyle a { text-decoration:none; color: #e7e7e7 }
-.ctxMenuItemHoverStyle a { text-decoration:none; color: #fff }
-.ctxMenuImg { vertical-align:middle; padding:1px; padding-right:4px }
-.ctxMenuShadow { background-color:#000; position:absolute; opacity:0.2; z-index:499 }
+.ctxMenuStyle { list-style: none; padding: .1em; margin: 0; background-color: #232323; width: 100px; font-size: 9px }
+.ctxMenuItemStyle { margin: 0; color: #e7e7e7; display: block; cursor: default; padding: .3em; border-bottom: 1px solid #232323; background-color:#3a3d40 }
+.ctxMenuItemHoverStyle { margin: 0; color: #fff; display: block; cursor: default; padding: .3em; border-color: "color.major.stronger (__FLAVOR__ border)"; background-color: "color.major.stronger (__FLAVOR__ background)"; }
+.ctxMenuItemStyle a { text-decoration: none; color: #e7e7e7 }
+.ctxMenuItemHoverStyle a { text-decoration: none; color: #fff }
+.ctxMenuImg { vertical-align: middle; padding: .1em; padding-right: .4em }
+.ctxMenuShadow { background-color: #000; position: absolute; opacity: 0.2; z-index: 499 }
