--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/foldable_boxes.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/foldable_boxes.css
@@ -6,14 +6,14 @@ author: lkemen@nuxeo.com
 */
 
 /* =Default boxes */
-.foldableBox { border-width: 1px; border-style: none none solid; border-color:"neutral.lighter (__FLAVOR__ border)"; font-size: .9em; margin-bottom: 20px }
+.foldableBox { border-width: 1px; border-style: none none solid; border-color:"neutral.lighter (__FLAVOR__ border)"; font-size: .9em; margin-bottom: 1.8em }
 
 .foldableBox h3 {
   background-color: #fff;
   border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)";
   font-size: 1.1em;
   height: 20px;
-  padding: 3px 3px 3px 18px }
+  padding: .3em .3em .3em 1.7em }
 .foldableBox h3.folded {
   background:url("${basePath}/icons/arrow_folded.gif") top left no-repeat; background-color: "neutral.medium (__FLAVOR__ background)" }
 .foldableBox h3.unfolded {
@@ -27,12 +27,12 @@ author: lkemen@nuxeo.com
   color: "black (__FLAVOR__ color)";
   display: block;
   float: left;
-  padding-right: 10px }
+  padding-right: 1em }
 .foldableBox h3 a.warningLink { color: "warning.status (__FLAVOR__ color)" }
-.foldableBox .boxBody { clear: both; padding: 10px }
+.foldableBox .boxBody { clear: both; padding: 1em }
 
 /* =Light boxes */
-.foldableLightBox { margin-bottom: 20px }
+.foldableLightBox { margin-bottom: 1.8em }
 .foldableLightBox div.folded {background: #fff url("${basePath}/icons/arrow_folded.gif") top left no-repeat }
 .foldableLightBox div.unfolded { background: #fff url("${basePath}/icons/arrow_unfolded.gif") top left no-repeat }
 .foldableLightBox div.folded a, .foldableLightBox div.unfolded a { color: "gray.dark (__FLAVOR__ color)"; float: left }
@@ -42,13 +42,13 @@ author: lkemen@nuxeo.com
   color: "gray.dark (__FLAVOR__ color)";
   font-size: .8em;
   height: 18px;
-  padding: 3px 3px 3px 18px }
+  padding: .3em .3em .3em 1.7em }
 .foldableLightBox .boxBody {
   border: 1px solid;
   border-color: "neutral.lighter (__FLAVOR__ border)";
   border-top: none;
   clear: both;
   font-size: .8em;
-  padding: 10px }
+  padding: 1em }
 
-.massEditForm foldableBox { margin-right: 15px }
+.massEditForm foldableBox { margin-right: 1.4em }
