--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/navigation.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/navigation.css
@@ -11,42 +11,42 @@ author: lkemen@nuxeo.com
 .tabsBar {
   border-width: 1px; border-style: none none solid;
   border-color: "neutral.light (__FLAVOR__ border)";
-  float:left;
-  margin-top:5px;
-  width:100% }
+  float: left;
+  margin-top: .4em;
+  width: 100% }
 .tabsBar ul {
-  list-style:none outside none;
-  margin:0;
-  padding:0 10px 0 0 }
+  list-style: none outside none;
+  margin: 0;
+  padding: 0 1em 0 0 }
 .tabsBar li {
-  float:left;
-  margin:0 0 -1px 3px;
-  padding:0 }
+  float: left;
+  margin: 0 0 -0.1em .3em;
+  padding: 0 }
 .tabsBar a,.tabsBar a:visited {
-  background:none "neutral.lighter (__FLAVOR__ background)";
-  border:1px solid; border-color: "neutral.lighter (__FLAVOR__ border)";
+  background: none "neutral.lighter (__FLAVOR__ background)";
+  border: 1px solid; border-color: "neutral.lighter (__FLAVOR__ border)";
   border-radius: 2px 2px 0 0;
-  color:"gray.dark (__FLAVOR__ color)";
-  display:block;
-  float:left;
-  padding:2px 5px;
+  color: "gray.dark (__FLAVOR__ color)";
+  display: block;
+  float: left;
+  padding: .2em .4em;
   text-decoration:none }
 .tabsBar li.selected a,.tabsBar li a:hover,.tabsBar li.selected a:visited {
-  background:none repeat scroll 0 0 #fff;
+  background: none repeat scroll 0 0 #fff;
   border: 1px solid;
   border-color: "neutral.light (__FLAVOR__ border)" "neutral.light (__FLAVOR__ border)" "noborder (__FLAVOR__ border)";
-  color:"black (__FLAVOR__ color)";
-  padding:2px 5px 3px }
+  color: "black (__FLAVOR__ color)";
+  padding: .2em .4em .3em }
 
-.subtabsBar {border-style:none none solid; border-width:1px; border-color: "neutral.lighter (__FLAVOR__ border)"; font-size: .9em}
-.subtabsBar a,.subtabsBar a:visited { color:"gray.dark (__FLAVOR__ color)" }
+.subtabsBar {border-style: none none solid; border-width: 1px; border-color: "neutral.lighter (__FLAVOR__ border)"; font-size: .9em}
+.subtabsBar a,.subtabsBar a:visited { color: "gray.dark (__FLAVOR__ color)" }
 .subtabsBar li.selected a,.subtabsBar li a:hover,.subtabsBar li.selected a:visited {
-   border-color: "neutral.lighter (__FLAVOR__ border)" "neutral.lighter (__FLAVOR__ border)" "noborder (__FLAVOR__ border)"; border-style:solid; border-width:1px; color:"default (__FLAVOR__ color)" }
+   border-color: "neutral.lighter (__FLAVOR__ border)" "neutral.lighter (__FLAVOR__ border)" "noborder (__FLAVOR__ border)"; border-style: solid; border-width: 1px; color: "default (__FLAVOR__ color)" }
 
 /* =Navigation controls */
-.pageNavigationControls, #pageNavigationControls { border-width: 1px; border-style: none none solid; border-color: "neutral.lighter (__FLAVOR__ border)"; margin: 0 0 5px; padding: 2px 0 0; text-align: center }
-.pageNavigationControls span, #pageNavigationControls span { color: "gray.dark (__FLAVOR__ color)"; font-weight: bold; margin: 10px 5px; vertical-align: top }
-.pageNavigationControls input, #pageNavigationControls input { border: medium none; box-shadow: none; margin-left: 5px }
+.pageNavigationControls, #pageNavigationControls { border-width: 1px; border-style: none none solid; border-color: "neutral.lighter (__FLAVOR__ border)"; margin: 0 0 .4em; padding: .2em 0 0; text-align: center }
+.pageNavigationControls span, #pageNavigationControls span { color: "gray.dark (__FLAVOR__ color)"; font-weight: bold; margin: 1em .5em; vertical-align: top }
+.pageNavigationControls input, #pageNavigationControls input { border: medium none; box-shadow: none; margin-left: .4em }
 
 /* =Back Arrow */
-.directoryBack { background: url("${basePath}/icons/arrow_left.gif") no-repeat scroll 3px 1px transparent; padding: 2px 2px 2px 20px }
+.directoryBack { background: url("${basePath}/icons/arrow_left.gif") no-repeat scroll 3px 1px transparent; padding: .2em .2em .2em 2em }
