--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/nuxeo_dm_specific.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/nuxeo_dm_specific.css
@@ -14,8 +14,8 @@ author: lkemen@nuxeo.com
 /* =Document list */
 .serverChoice {
   float: left;
-  margin-top: 20px;
-  margin-right: 30px;
+  margin-top: 2em;
+  margin-right: 2.3em;
   text-align: center;
   width: 200px }
 
@@ -23,35 +23,35 @@ author: lkemen@nuxeo.com
 .listShuttleTable .listShuttleSelectionActions a { display: block }
 
 /* =Clipboard & Worklist */
-.userClipboard { background-color: #fff; height: 1%; margin: 10px 0 10px 0 }
-.userClipboardContent { margin: 0; padding: 10px 0 10px 3px }
+.userClipboard { background-color: #fff; height: 1%; margin: 1em 0 }
+.userClipboardContent { margin: 0; padding: 1em 0 1em .3em }
 .userClipboard h4 {
   border-width: 1px; border-style: none none dotted; border-color: "neutral.medium (__FLAVOR__ border)";
   color: "gray.medium (__FLAVOR__ color)";
   font-size: 1.2em;
   height: 16px;
-  margin: 0 0 2px;
-  padding: 8px 2px 2px }
+  margin: 0 0 .2em;
+  padding: .7em .2em .2em }
 
 .dropInto { background-color: "neutral.lighter (__FLAVOR__ background)" }
 .dropIntoClipboardCopy { background: transparent url("${basePath}/icons/action_clipboard_copy.gif") no-repeat 98% 3%; background-color: "color.major.dark (__FLAVOR__ background)" }
 
-#clipboardCopy { padding: 3px }
+#clipboardCopy { padding: .3em }
 
-.clipboardFunctions { border-width: 2px; border-style: solid none none; border-color:"neutral.lighter (__FLAVOR__ border)"; padding-top: 10px }
-.clipboardFunction { padding: 2px }
+.clipboardFunctions { border-width: 2px; border-style: solid none none; border-color:"neutral.lighter (__FLAVOR__ border)"; padding-top: .9em }
+.clipboardFunction { padding: .2em }
 .clipboardRemoveItem { float: right }
 
-.clipboardEmptyMessage { color: "gray.dark (__FLAVOR__ color)"; font-style: italic; padding: 0 2px 2px 2px; text-align: center }
+.clipboardEmptyMessage { color: "gray.dark (__FLAVOR__ color)"; font-style: italic; padding: 0 .2em .2em; text-align: center }
 
 /* Fix icon size to allow icon upload in Nuxeo Studio */
 .bigIcon { width: 50px }
 .smallIcon { height: 16px; width: 16px }
 
 /* check if it's still used */
-.wizardFrame { border: 1px solid; border-color: "neutral.lighter (__FLAVOR__ border)"; padding: 0 5px; width: 800px }
-.wizardFrame .wizardFinish h4 img { float: left; margin-right: 10px }
-.wizardFrame .templatePreview { border: 1px solid; border-color: "neutral.lighter (__FLAVOR__ border)"; padding: 10px !important }
+.wizardFrame { border: 1px solid; border-color: "neutral.lighter (__FLAVOR__ border)"; padding: 0 .4em; width: 800px }
+.wizardFrame .wizardFinish h4 img { float: left; margin-right: 1em }
+.wizardFrame .templatePreview { border: 1px solid; border-color: "neutral.lighter (__FLAVOR__ border)"; padding: 1em !important }
 .wizardFrame .templatePreview img { border: 1px solid #333; float: left }
 .wizardFrame .templatePreview .templatePreviewDescription { font-style: italic }
 .wizardFrame .wizardButtonBar { text-align: right }
@@ -59,7 +59,7 @@ author: lkemen@nuxeo.com
 .closedContent {
   background: #fff;
   border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)";
-  margin: 15px 0 0;
-  padding: 0 10px 10px 10px }
+  margin: 1.4em 0 0;
+  padding: 0 .9em .9em }
 
 .taskActions { width: 470px }
