--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/picture_book.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/picture_book.css
@@ -7,20 +7,20 @@ author: lkemen@nuxeo.com
   border: 1px solid;  border-color: "neutral.light (__FLAVOR__ border)";
   float: left;
   height: 100%;
-  margin: 10px 20px 10px 0;
+  margin: 1em 1.8em 1em 0;
   text-align: center;
   width: 140px }
 
 .itemSelected { background-color: #ECF6FF; border: 1px solid; border-color: "color.major.strong (__FLAVOR__ border)" }
 
-.pictureBookItem .cell { height: 110px; padding-top: 15px; text-align: center }
-.pictureBookItem .cell a { display: block; height: 100px; padding: 20px; width: 100px }
-.pictureBookItemTitle { background-color: #fff; font-size:.8em; padding: 5px 0 }
+.pictureBookItem .cell { height: 110px; padding-top: 1.4em; text-align: center }
+.pictureBookItem .cell a { display: block; height: 100px; padding: 2em; width: 100px }
+.pictureBookItemTitle { background-color: #fff; font-size:.8em; padding: .5em 0 }
 
-.slideshowContent { padding: 10px 0 5px 0 }
-.slideshowContent h3 { padding: 8px 0 5px 70px }
+.slideshowContent { padding: 1em 0 .5em }
+.slideshowContent h3 { padding: .7em 0 .5em 6em }
 
-.slideShowControl { margin: 0 0 10px }
-.slideShowControl input { margin: 0 3px; padding: 0 }
-.slideShowControl .indexPicture { margin: 0 3px 4px 0 }
-.slideShowControl span { padding-right: 10px }
+.slideShowControl { margin: 0 0 1em }
+.slideShowControl input { margin: 0 .3em; padding: 0 }
+.slideShowControl .indexPicture { margin: 0 .3em .4em 0 }
+.slideShowControl span { padding-right: 1em }
