--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/popups.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/popups.css
@@ -22,12 +22,12 @@ author: lkemen@nuxeo.com
 .genericPopUp .closePopUpHeader {
   background-color: "color.major.light (__FLAVOR__ background)";
   border-width: 1px; border-style: none none solid;  border-color: "neutral.light (__FLAVOR__ border)";
-  padding: 3px;
+  padding: .3em;
   text-align: right }
 
 .genericPopUp .closePopUpHeader .closePopUp { cursor: pointer; float: right }
 .genericPopUp .closePopUpHeader .popUpTitle { float: left; font-size: 1.2em }
-.genericPopUp .popUpContent { height: 390px; overflow: auto; padding: 10px }
-.genericPopUp .dr-tree td, .genericPopUp .rich-tree td { padding: 1px }
+.genericPopUp .popUpContent { height: 390px; overflow: auto; padding: 1em }
+.genericPopUp .dr-tree td, .genericPopUp .rich-tree td { padding: .1em }
 
 .bigPopUp { height: 70%; width: 80% }
