--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/richfaces_components.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/richfaces_components.css
@@ -9,39 +9,39 @@ author: lkemen@nuxeo.com
 /* =Tree */
 .treeLink a, .treeLink a:link, .treeLink a:visited { font-weight: normal }
 .treeLink a:hover, .treeLink a:active { text-decoration: underline }
-.treeLink img {margin: 3px 4px 4px 0; vertical-align: top }
+.treeLink img {margin: .3em .4em .4em 0; vertical-align: top }
 
-.cell { margin-bottom: 2px; padding: 2px }
+.cell { margin-bottom: .2em; padding: .2em }
 .cell img, .clipboardFunction img { vertical-align: middle }
-.cell .iconImage { margin-right: 4px }
+.cell .iconImage { margin-right: .4em }
 
 .menu dl, .menu dd { margin: 0 }
-.menu dd { padding: 10px 0 }
+.menu dd { padding: 1em 0 }
 
 td.dr-tree-h-text, td.dr-tree-h-text span, td.dr-tree-h-text a.treeLink { white-space: normal }
-.dr-tree-h-ic-div { margin-left: 8px; padding-left: 10px }
+.dr-tree-h-ic-div { margin-left: .7em; padding-left: 1em }
 .treeNodeHighlightedClass { text-decoration: none }
 .treeNodeSelectedClass { border: none }
 
-.dataInput .dr-tree td, .dataInput .dr-tree td td {padding: 1px }
+.dataInput .dr-tree td, .dataInput .dr-tree td td {padding: .1em }
 .fieldColumn .dr-tree img { margin: 0 }
 
 /* =FileUpload */
-.rich-fileupload-list-decor { margin: 10px 0 }
-.rich-fileupload-button, .rich-fileupload-button-border { padding: 2px }
-.rich-fileupload-button-light, .rich-fileupload-button-press { padding: 1px }
-.rich-fileupload-button-content { padding: 2px 6px 2px 19px }
+.rich-fileupload-list-decor { margin: 1em 0 }
+.rich-fileupload-button, .rich-fileupload-button-border { padding: .2em }
+.rich-fileupload-button-light, .rich-fileupload-button-press { padding: .1em }
+.rich-fileupload-button-content { padding: .2em .5em .2em 1.7em }
 
 /* =Modal Panel */
-.rich-mpnl-mask-div { opacity:0.1 }
-h3.documentTypes { padding:0; margin:15px 0px 5px 0px; color:#333; border-width: 1px; border-style: none none solid;  border-color: "neutral.light (__FLAVOR__ border)"; }
+.rich-mpnl-mask-div { opacity: 0.1 }
+h3.documentTypes { padding: 0; margin: 1.4em 0 .5em; color: #333; border-width: 1px; border-style: none none solid;  border-color: "neutral.light (__FLAVOR__ border)"; }
 
-.documentType { margin:10px 0px; width:200px }
-.documentType img { float:left; margin-right:5px }
-.documentType a, .documentType a:link, .documentType a:visted, .documentType a:hover { font-weight:bold; color:#0066CC; text-decoration:none }
-.documentType span { color:#454545 }
-a.documentTypeLink { color:#063C9F; font-weight:bold; text-decoration:none }
-.imagingPanelDownloadLink { color:#0066CC; display:block; font-weight:bold; padding:5px 0px 2px 0px }
+.documentType { margin: 1em 0; width: 200px }
+.documentType img { float: left; margin-right: .5em }
+.documentType a, .documentType a:link, .documentType a:visted, .documentType a:hover { font-weight: bold; color: "link (__FLAVOR__ color)"; text-decoration: none }
+.documentType span { color: #454545 }
+a.documentTypeLink { color: "link (__FLAVOR__ color)"; font-weight: bold; text-decoration: none }
+.imagingPanelDownloadLink { color: "link (__FLAVOR__ color)"; display: block; font-weight: bold; padding: .4em 0 .2em }
 
-#tooltip { position:absolute; display:block }
-#tooltipContent { display:block; padding:2px 12px 3px 7px; margin-left:5px; background:#FFFFAA; color:#000; border: 1px solid #333 }
+#tooltip { position: absolute; display: block }
+#tooltipContent { display: block; padding: .2em 1.1em .3em .6em; margin-left: .5em; background: #FFFFAA; color:"black (__FLAVOR__ color)"; border: 1px solid #333 }
