--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/tables.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/tables.css
@@ -3,61 +3,61 @@ Style all the tables displayed
 author: lkemen@nuxeo.com
 */
 
-table thead th { padding: 3px; text-align: left }
+table thead th { padding: .3em; text-align: left }
 
 .dataList { background: white; border-collapse: collapse; margin: 0 }
 .dataList td {
   border-width: 1px; border-style: solid none; border-color: "neutral.light (__FLAVOR__ border)";
-  padding: 5px 3px }
+  padding: .4em .3em }
 .dataOutput thead th, .dataList thead th {
   background-color: "neutral.light (__FLAVOR__ background)";
   border-width: 1px; border-style: none none solid; border-color: "neutral.light (__FLAVOR__ border)";
   color: "gray.dark (__FLAVOR__ color)";
-  padding: 7px 3px;
+  padding: .6em .3em;
   text-align: left }
 .dataList thead th a:hover { text-decoration: underline }
 
-.dataInput { margin-top: 5px }
-.dataInput td, .rightsAddManager .dataInput td { border: 0 solid; padding: 7px 4px }
-.dataInput td td, .dataInput td td td { padding: 3px 4px }
-.dataInput .button { margin: 0 10px 0 0 }
-.archiveTabContent .dataInput { border: none; margin-bottom: 15px }
+.dataInput { margin-top: .4em }
+.dataInput td, .rightsAddManager .dataInput td { border: 0 solid; padding: .6em .3em }
+.dataInput td td, .dataInput td td td { padding: .3em .4em }
+.dataInput .button { margin: 0 1em 0 0 }
+.archiveTabContent .dataInput { border: none; margin-bottom: 1.4em }
 .dataInputGroup { margin: 0; padding: 0; vertical-align: top }
 
 .dataOutput, .dataOutput2Columns {
   border-collapse: collapse;
-  margin-top: 7px;
-  margin-bottom: 5px }
+  margin-top: .7em;
+  margin-bottom: .4em }
 .dataOutput td {
   border-width: 1px; border-style: solid none; border-color: "neutral.light (__FLAVOR__ border)";
-  padding: 5px 3px }
+  padding: .4em .3em }
 .dataOutput td table td { border: 0 none transparent }
 .dataOutput, .dataOutput2Columns, .dataList { width: 100% }
-.dataOutput2Columns td { padding: 5px 3px; vertical-align: top }
+.dataOutput2Columns td { padding: .4em .3em; vertical-align: top }
 table.dataOutput thead th a, table.dataOutput thead th a:hover, table.dataOutput thead th a:active, table.dataOutput thead th a:visited { color: "gray.dark (__FLAVOR__ color)" }
-.dataOutput .button { margin: 2px 10px 2px 0 !important }
-table.dataOutput th a img { margin: 0 0 0 2px; padding: 0; vertical-align: bottom }
+.dataOutput .button { margin: .2em 1em .2em 0 !important }
+table.dataOutput th a img { margin: 0 0 0 .2em; padding: 0; vertical-align: bottom }
 
 .boldColumn { font-weight: bold !important }
 .buttonColumn { text-align: center; width: 280px }
 .focusColumn { background-color: "neutral.lighter (__FLAVOR__ background)" }
 .radioColumn {
-  padding: 0 0 0 5px;
+  padding: 0 0 0 .5em;
   vertical-align: top;
   width: 8px }
-.iconColumn { text-align: center; width: 20px }
+.iconColumn { text-align: center; width: 1.8em }
 .iconColumn .cell { background: none; width: 40px }
 .iconColumn .dropInto { background-color: "neutral.light (__FLAVOR__ background)" }
 .iconColumn img { background: none; position: relative; z-index: 25 }
 .twoColumns { width: 50% }
-.fieldColumn img { margin: 0 4px; vertical-align: top }
+.fieldColumn img { margin: 0 .4em; vertical-align: top }
 
-.buttonsGadgetNoForm .button { margin-right: 10px }
-.buttonsGadget { margin: 5px 0 5px 40px }
-.smallButtonsGadget { margin: 0 0 5px 100px }
+.buttonsGadgetNoForm .button { margin-right: 1em }
+.buttonsGadget { margin: .4em 0 .4em 3.2em }
+.smallButtonsGadget { margin: 0 0 .4em 7em }
 
 .labelColumn { font-weight: bold; vertical-align: top; width: 120px }
-.labelColumn span { display: block; padding-right: 8px }
+.labelColumn span { display: block; padding-right: .7em }
 .workflowLabelColumn { width: 120px }
 
 .relationCommentList td { border: 0 none }
@@ -67,12 +67,12 @@ table.dataOutput th a img { margin: 0 0 0 2px; padding: 0; vertical-align: botto
 .relationCreateFieldColumn, .fieldColumn, .workflowFieldColumn { vertical-align: top }
 .relationCreateFieldColumn table, .fieldColumn table, .workflowFieldColumn table { border: 0 none; margin: 0; vertical-align: top }
 
-.selectDocumentType td { padding: 3px }
-.selectDocumentType td a img { margin-right: 4px; vertical-align: top }
+.selectDocumentType td { padding: .3em }
+.selectDocumentType td a img { margin-right: .4em; vertical-align: top }
 
-.vocabularyEntryContent { margin-left: 18px }
+.vocabularyEntryContent { margin-left: 1.6em }
 .vocabularyEntryContent .notEditable { background-color: #fff }
-.vocabularyEntryContent .dataInput { border: none; margin-bottom: 15px }
+.vocabularyEntryContent .dataInput { border: none; margin-bottom: 1.4em }
 
 table.trashTable tbody tr:hover { background-color: "info (__FLAVOR__ background)" }
 
