--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
@@ -7,7 +7,7 @@ author: lkemen@nuxeo.com
 */
 
 /* =TabsContent */
-.tabsContent { font-size: .95em; margin: 0; padding: 5px 10px 10px 10px }
+.tabsContent { font-size: .95em; margin: 0; padding: .5em 1em 1em }
 
 /* =Layout View and Summary Tab Styles */
 .layoutViewMode { margin: 0; padding: 0 }
@@ -15,77 +15,77 @@ author: lkemen@nuxeo.com
 .layoutViewMode a img { border: 1px solid; border-color: "noborder (__FLAVOR__ border)" }
 .layoutViewMode a:hover img, .layoutViewMode li.selected img { border: 1px solid; border-color: "neutral.medium (__FLAVOR__ border)" }
 
-.summary_div_0 { float: left; padding: 10px 0; width: 62% }
-.summary_div_1 { float: right; font-size: .9em; padding: 10px 0; width: 33% }
+.summary_div_0 { float: left; padding: 1em 0; width: 62% }
+.summary_div_1 { float: right; font-size: .9em; padding: 1em 0; width: 33% }
 .summary_div_2 { clear: both }
 
-.contentViewTitle { float: left; line-height: normal; margin: 10px 10px 10px 0 }
+.contentViewTitle { float: left; line-height: normal; margin: 1em 1em 1em 0 }
 
 h3.summaryTitle {
   border-width: 1px; border-style: none none solid; border-color: "neutral.medium (__FLAVOR__ border)";
   color: "gray.medium (__FLAVOR__ color)";
   font-size: 1.2em;
   font-weight: bold;
-  margin: 0 0 10px 0;
-  padding: 17px 0 3px 0 }
+  margin: 0 0 1em;
+  padding: 1.5em 0 .3em }
 .summary_div_1 h3.summaryTitle { color: "gray.medium (__FLAVOR__ color)"; font-size: 1.1em }
 .summary_div_1 .fieldColumn img { float: left; margin-bottom: 15px }
 
-.description_block span { display: block; font-size: .8em; padding-bottom: 10px }
+.description_block span { display: block; font-size: .8em; padding-bottom: 1em }
 .dublincore_block table.floatingLeftTable { float: left; margin-right: 100px }
-.labelColumnLeftAlign { font-weight: bold; padding-right: 30px }
-.rank_block, .publication_block, .attachments { margin-top: 15px }
+.labelColumnLeftAlign { font-weight: bold; padding-right: 2.5em }
+.rank_block, .publication_block, .attachments { margin-top: 1.3em }
 
-.content_block table { margin-bottom: 10px; width: 100% }
+.content_block table { margin-bottom: 1em; width: 100% }
 .content_block td { padding: 0; vertical-align: top }
 .content_block .labelColumn { width: 100px }
 .content_block .actionsColumn { text-align: right; vertical-align: top; width: 20% }
-.content_block img { padding: 0 5px }
+.content_block img { padding: 0 .5em }
 
-.note_content_block { border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; margin: 0 0 15px; padding: 15px }
+.note_content_block { border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; margin: 0 0 1.4em; padding: 1.4em }
 .note_content_block span, .note_content_block p { font-size: 1.05em; line-height: 1.8em }
 .note_content_block img { max-height: 150px; max-width: 200px }
 
-.lockFile_block, .restoreFile_block { padding: 0 0 10px }
-.lockDetail, .DetailList { padding-top: 5px }
+.lockFile_block, .restoreFile_block { padding: 0 0 1em }
+.lockDetail, .DetailList { padding-top: .4em }
 .summary_locked { color: "warning.status (__FLAVOR__ color)"; font-weight: bold }
 .summary_unlocked { color: "normal.status (__FLAVOR__ color)"; font-weight: bold }
 
-.lcAndVersion { border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; padding: 3px }
+.lcAndVersion { border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; padding: .3em }
 
-.actions_block { border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; margin: 10px 0; padding: 10px 7px 3px }
+.actions_block { border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; margin: 1em 0; padding: 1em .6em .2em }
 
 .comments_block .commentBlock { border: none }
-.comments_block .commentQuote { margin: 5px 0 5px 24px }
+.comments_block .commentQuote { margin: .4em 0 .4em 2em }
 
-.metadata_block .dataInput td { padding: 3px }
+.metadata_block .dataInput td { padding: .2em }
 
 /*  =Manage tab */
-.rightsAdd { margin: 10px 0 10px 0 }
-.rightsAddTitle { background-color: "neutral.lighter (__FLAVOR__ background)"; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; padding: 5px; text-align: center }
-.rightsAddLabel { font-weight: bold; padding: 0 5px 0 0 }
+.rightsAdd { margin: 1em 0 }
+.rightsAddTitle { background-color: "neutral.lighter (__FLAVOR__ background)"; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; padding: .4em; text-align: center }
+.rightsAddLabel { font-weight: bold; padding: 0 .4em 0 0 }
 .rightsAddSelect { margin-top: 0}
 .rightsAddManager {
   background: transparent url("${basePath}/img/rightsadd_bar.gif") no-repeat center;
-  margin: 3px 0 0 0;
+  margin: .2em 0 0 0;
   width: 100% }
 .rightsAddManager td {
   background-color: #fff;
   border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)";
-  margin: 0 10px 0 10px;
-  padding: 10px }
+  margin: 0 1em 0 1em;
+  padding: 1em }
 .rightsAddManager .labelColumn { width: 80px }
 
 .userAndGroupSearch { margin: 0 }
-.userAndGroupFilter { margin: 15px 0 0 0 }
+.userAndGroupFilter { margin: 1.3em 0 0 }
 
-.buttonsGadgetNoForm { margin: 0 5px }
+.buttonsGadgetNoForm { margin: 0 .4em }
 
 .directoryFilter, .searchField {
   border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)";
   font-size: 1em;
-  margin: 0 5px 10px 0;
-  padding: 3px }
+  margin: 0 .3em 0 0;
+  padding: .25em }
 
 /*  =Relations */
 .relationPredicateColumn { vertical-align: top; width: 100px }
@@ -93,7 +93,7 @@ h3.summaryTitle {
 .relationCreateLabelColumn { width: 100px }
 
 /*  =Archive */
-.archiveTabContent { margin-left: 18px }
+.archiveTabContent { margin-left: 1.8em }
 .archiveTabContent .notEditable { background-color: #fff; border: none }
 .archiveTabContent .currentDocumentInformation { background-color: "neutral.medium (__FLAVOR__ background)" }
 
@@ -101,17 +101,17 @@ h3.summaryTitle {
   background: "neutral.medium (__FLAVOR__ background)";
   border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)";
   display: block;
-  margin: 5px 0 10px 0;
-  padding: 5px;
+  margin: .4em 0 1em;
+  padding: .4em;
   text-align: center }
 
 /* =Comments */
-.commentBlock { margin: 7px 0 8px; padding: 2px 10px 2px 0 }
-.commentActions { float: right; font-size: .8em; margin-right: 4px; padding: 3px }
+.commentBlock { margin: .7em 0 .8em; padding: .2em 1em .2em 0 }
+.commentActions { float: right; font-size: .8em; margin-right: .4em; padding: 2em }
 .commentCreationDate { font-weight: normal }
-.commentQuote { margin: 5px 0 5px 0 }
+.commentQuote { margin: .4em 0 }
 .commentAuthor {
   background: transparent url("${basePath}/icons/comment.gif") no-repeat 4px 4px;
   color: "gray.dark (__FLAVOR__ color)";
   font-weight: bold;
-  padding: 5px 3px 3px 24px }
+  padding: .4em .3em .3em 2.1em }
