--- a/nuxeo-user-center/src/main/resources/themes/css/nuxeo_usercenter_specific.css
+++ b/nuxeo-user-center/src/main/resources/themes/css/nuxeo_usercenter_specific.css
@@ -6,28 +6,31 @@ author: lkemen@nuxeo.com
 */
 
 /* =Left Column----*/
-.adminTabsColumn { background: "color.major.light (__FLAVOR__ background)"; box-shadow: -2px -1px 5px #9F9F9F inset; padding: 0; width: 210px }
+.adminTabsColumn { background: "color.major.light (__FLAVOR__ background)"; box-shadow: -2px -1px 5px #9F9F9F inset; padding: 0; vertical-align: top;
+	width: 210px }
 .adminTabBlock { height: 100%; margin: 0 }
 
-.adminTabsColumn ul {  margin: 0; padding: 20px 0 30px }
-.adminTabsColumn li { box-shadow: -5px 2px 5px #b0b0b0; margin: 0 0 3px; padding: 0 }
-.adminTabsColumn li a { color: "gray.medium (__FLAVOR__ color)"; display: block; padding: 7px 0 8px 10px; text-decoration: none }
-.adminTabsColumn li a img { margin: 0 5px -1px 0 }
+.adminTabsColumn ul {  margin: 0; padding: 2em 0 }
+.adminTabsColumn li { box-shadow: -5px 2px 5px #b0b0b0; margin: 0 0 .15em; padding: 0 }
+.adminTabsColumn li a { color: "gray.medium (__FLAVOR__ color)"; display: block; padding: .6em 0 .6em .8em; text-decoration: none }
+.adminTabsColumn li a img { margin: 0 .4em -0.15em 0 }
 
-.adminTabsColumn li.selected, .adminTabsColumn li.selected:hover { background-color: #fff; margin: 0 -1px 3px }
+.adminTabsColumn li.selected, .adminTabsColumn li.selected:hover { background-color: #fff; margin: 0 0 .3em }
 .adminTabsColumn li:hover { background-color: #fff }
 .adminTabsColumn li.selected a, .adminTabsColumn li:hover a { color: "black (__FLAVOR__ color)"; }
 
 /* =Main Frame */
-.adminTabsColumn { min-height: 590px; height: auto!important; height: 590px; }
+.adminTabsColumn { min-height: 660px; height: auto!important; height: 660px }
 .adminViewContent { border-collapse: collapse; height: 100%; width: 100% }
 .adminViewContent td { vertical-align: top }
-.adminContentColumn { padding: 20px }
-.adminViewContent h2 { padding: 20px 0 10px }
-.adminViewContent p { padding: 5px 0 }
+.adminContentColumn { padding: 2em }
+.adminViewContent h2 { padding: 2em 0 1em }
+.adminViewContent p { padding: .4em 0 }
 
 /* =Override GWT styles*/
 body, table td, select { font-family: "default (__FLAVOR__ font)"; }
 .widget .content { width: 100% }
 
-.adminViewContent p.directoryBack {  padding: 2px 2px 2px 20px }
+.adminViewContent p.directoryBack {  padding: .2em .2em .2em 2em }
+
+.description_block span { font-size: 1em }
