--- a/nuxeo-user-center/src/main/resources/themes/css/relationship_network.css
+++ b/nuxeo-user-center/src/main/resources/themes/css/relationship_network.css
@@ -10,17 +10,17 @@ author: lkemen@nuxeo.com
   border-width: 1px; border-style: solid; border-color: "neutral.light (__FLAVOR__ border)";
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
   display: none;
-  padding: 5px;
+  padding: .5em;
   position: absolute; right: 0; top: 10px;
   width: auto; z-index: 3000 }
 .relationPopUp table { width: 100% }
-.relationPopUp table td { border-width: 1px; border-style: none none solid; border-color: "neutral.light (__FLAVOR__ border)"; padding: 5px 0 }
+.relationPopUp table td { border-width: 1px; border-style: none none solid; border-color: "neutral.light (__FLAVOR__ border)"; padding: .5em 0 }
 .relationPopUp table td span { float: left }
-.relationPopUp table input { float: right; margin: 0 0 0 20px }
+.relationPopUp table input { float: right; margin: 0 0 0 2em }
 
 /* =Users view */
-.tag { margin:2px; display:block; padding: 2px; border-radius: 3px; background: "color.major.light (__FLAVOR__ background)"; border: 1px solid; border-color: "color.major.medium (__FLAVOR__ border)";}
+.tag { background: "color.major.stronger (__FLAVOR__ background)"; border-radius: 3px; color: #fff; display: block; margin: .2em; padding: 0 .3em;}
 .userRelation { float: right }
-.userRelationsPanel { padding: 10px 15px 15px }
+.userRelationsPanel { padding: 1em 1.3em 1.3em }
 .userRelationsPanel #searchForm { display: inline }
 .userRelationsPanel .dataOutput tr:hover { background: "color.major.light (__FLAVOR__ background)"; }
