--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/forms.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/forms.css
@@ -10,10 +10,11 @@ textarea { font-family: "default (__FLAVOR__ font)"; padding: .4em; font-size: .
 .selectDocumentType { margin-top: 1em }
 .checkBox { margin-right: .3em; border: none }
 .required { background: transparent url("${basePath}/icons/required.gif") top right no-repeat; padding: 0 1em 0 0 }
+option { background-color: white }
 
 input, input[type="file"], textarea, select { border: 1px solid #bbb; border-radius: 2px; box-shadow: 1px 1px 2px #e0e0e0 inset; color: #666; display: inline-block; font-size: 1em; line-height: 18px; padding: .3em }
 input[type="file"] { margin-left: .6em }
-input[type="checkbox"], input[type="radio"], input[type="image"] { border: none !important; box-shadow: none; }
+input[type="checkbox"], input[type="radio"], input[type="image"], input[type="hidden"] { background: none; border: none !important; box-shadow: none; }
 
 select:focus > option:checked, select:focus > optgroup > option:checked { background-color: "color.major.stronger (__FLAVOR__ background)"; }
 input:focus, textarea:focus { border-color: "color.major.strong (__FLAVOR__ border)"; }
