--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/messages_and_tooltips.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/messages_and_tooltips.css
@@ -20,7 +20,7 @@ author: lkemen@nuxeo.com
   display: block;
   list-style: none;
   margin: 0;
-  padding: 10px 15px }
+  padding: .8em 1.2em }
 
 .errorMessage, .errorFeedback { background-color:"warning (__FLAVOR__ background)"; border-color:"error (__FLAVOR__ border)" }
 .warningMessage, .warningFeedback { background-color: "info (__FLAVOR__ background)"; border-color:"warning (__FLAVOR__ border)" }
